# offsync

./: .gitignore  README.md  pyproject.toml
offsync/: audit.py  cli.py  config.py  deps.py  ssh.py  sync.py  target.py
tests/: test_config.py  test_security.py  test_sync.py  test_target.py
